feat(#232): RSR-630 configure network for GSE and SMV ControlBlocks
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>